edit docker configs